--- a/Week 1/input-form.html
+++ b/Week 1/input-form.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="button" name="click me" value="click"> <br> <br>
+    <!-- <input type="button" name="click me" value="click"> <br> <br>
     <input type="password" name="click me" value="click"> <br> <br>
     <input type="number" name="click me" value="click"> <br> <br>
 
@@ -21,6 +21,20 @@
                 <input id="password" type="password"/> <br>
                 <input id="username"/> <br>
         </fieldset>
-    </form>
+    </form> -->
+
+    <input type="radio" name="item">item1</input>
+    <input type="radio" name="item">item2</input>
+ 
+
+    <br>
+    <br>
+    <label>item1</label>
+    <input type="checkbox">
+
+    <label>item2</label>
+    <input type="checkbox">
+
+    
 </body>
 </html>
