--- a/Week 1/listing.html
+++ b/Week 1/listing.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li>apple</li>
-        <li>banana</li>
-        <li>guava</li>
+      <li>apple</li>
+      <li>banana</li>
+      <li>guava</li>
     </ul>
-</body>
+
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+  </body>
 </html>
