--- a/Week 1/assignment1.html
+++ b/Week 1/assignment1.html
@@ -9,9 +9,6 @@
         border: 2px solid black;
         text-align: center;
       }
-      header {
-        border: 1px solid red;
-      }
       aside {
         border: 1px solid red;
         width: 25%;
@@ -21,12 +18,12 @@
       section {
         width: 37%;
         float: right;
-        border: 1px solid red;
+        border: 1px solid blue;
         height: 250px;
         float: left;
       }
       footer {
-        border: 1px solid red;
+        border: 1px solid green;
       }
     </style>
   </head>
@@ -47,6 +44,7 @@
         <footer>
             Footer
         </footer>
+        <center style="border: 1px solid yellow;">Test</center>
     </div>
   </body>
 </html>
