--- a/Week 1/assignment1.html
+++ b/Week 1/assignment1.html
@@ -29,22 +29,12 @@
   </head>
   <body>
     <div>
-        <header>
-            Header
-        </header>
-        <aside>
-            Aside
-        </aside>
-        <section>
-            Subsection 1
-        </section>
-        <section>
-            Subsection 2
-        </section>
-        <footer>
-            Footer
-        </footer>
-        <center style="border: 1px solid yellow;">Test</center>
+      <header>Header</header>
+      <aside>Aside</aside>
+      <section>Subsection 1</section>
+      <section>Subsection 2</section>
+      <footer>Footer</footer>
+      <center style="border: 1px solid yellow">Test</center>
     </div>
   </body>
 </html>
