--- a/Week2/index.html
+++ b/Week2/index.html
@@ -7,21 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <style>
-    
+     
 </style>
 <body>
-    <h1>mern</h1>
-    <h2 class="h2-tag">stack</h2>
-    <h3 id="h3-tag">developer</h3>
-    <div style="background-color: orange;">
-        <h4>welcome</h4>
-        <h5>to</h5>
-        <h6>class</h6>
-    </div>
-    <h4>this is outer h4 tagg</h4>
-    <p>this is para tag</p>
-    <input type="text" placeholder="enter your name" />
-    <input type="number" placeholder="enter your number" />
-    <input />
+    <h1 class="hello">Hello Creators</h1>
 </body>
 </html>
