--- a/Week 3/bootstrap-started.html
+++ b/Week 3/bootstrap-started.html
@@ -12,7 +12,24 @@
     <title>Document</title>
   </head>
   <body>
-    Hello World
+    <div
+      class="d-flex bg-danger justify-content-center justify-content-md-between flex-column flex-md-row">
+      <div class="border border-dark rounded p-2 text-white">Name - Mayank</div>
+      <div class="border border-dark rounded p-2 text-white">
+        Education - Btech
+      </div>
+      <div class="border border-dark rounded p-2 text-white">
+        Hometown - Meerut
+      </div>
+      <div class="border border-dark rounded p-2 text-white">
+        Hobbies
+        <ul class="bullet">
+          <li>Football</li>
+          <li>Chess</li>
+          <li>Music</li>
+        </ul>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
